[package]
name = "json_fuse_fs"
version = "0.1.0"
authors = ["francesco <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = { git = "https://github.com/zargony/rust-fuse" }
serde_json = "1.0.40"
log = "0.4.8"
nix = "0.14.1"
env_logger = "0.6.2"
libc = "0.2.60"
